--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
+
+    def BASE_URL = '"https://uinames.com/api/"'
+
     defaultConfig {
         applicationId rootProject.applicationId
         minSdkVersion rootProject.minSdkVersion
@@ -9,11 +12,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "BASE_URL", BASE_URL)
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", BASE_URL)
         }
     }
     //Required to enable lambda expressions
@@ -43,6 +48,9 @@ dependencies {
 
     //Unit tests dependencies
     testImplementation "junit:junit:$rootProject.junitVersion"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
 
     //UI tests dependencies
     androidTestImplementation "androidx.test:runner:$rootProject.testRunnerVersion"
