--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constrainLayoutVersion"
     implementation "com.google.android.material:material:$rootProject.materialVersion"
     implementation "androidx.cardview:cardview:$rootProject.cardViewVersion"
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerViewVersion"
